methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
  for (compteur <- 1 to 4) {
    avance()
    avance()
    gauche()
  }
}



run() {
  for (compteur2 <- 1 to 5) {
  	dogHouse
  }
}
